--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,9 @@
     "tests"
   ],
   "devDependencies": {
-    "requirejs": "^2.3.0"
+    "requirejs": "^2.3.1",
+    "angular": "^1.5.8",
+    "jquery": "^3.1.0",
+    "bootstrap": "^3.3.7"
   }
 }
