Angular1 using requirejs

--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "requirejs": "^2.3.1",
     "angular": "^1.5.8",
     "jquery": "^3.1.0",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "angular-route": "^1.5.8"
   }
 }
